pf se me ha olvidado hacer commits jaja

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=celia
 spring.datasource.password=Temp2024$$
 
 # Configuracion del ORM Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true # para que en la consola salga mejor explicado?
 spring.jpa.show-sql=true
 
 # hay que indicar el máximo de partes y máximo de fichero porque si son muy grandes se puede reventar el servidor
